--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     content="Serrurier Le Plessis-Robinson, Dépannage serrurier Le Plessis-Robinson, Artisan serrurier Le Plessis-Robinson"
     name="keywords" />
   <meta name="author" content="serrurierleplessisrobinson.fr" />
+  <meta content="https://serrurierversailles.fr/images/background/2.png" property="og:image">
   <link rel="canonical" href="https://serrurierleplessisrobinson.fr" />
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.css" />
@@ -33,7 +34,7 @@
           "postalCode": "92350",
           "addressCountry": "FR"
         },
-        "image": "http://serrurierleplessisrobinson.fr/images/serrurierleplessisrobinson.webp",
+        "image": "http://serrurierleplessisrobinson.fr/images/serrurierleplessisrobinson.jpg",
         "email": "contact@serrurierleplessisrobinson.fr",
         "telephone": "+33756795008",
         "url": "http://serrurierleplessisrobinson.fr/",
